# can-protolyser

./: Cargo.toml  config.json
src/: dialog.rs  file.rs  filter.rs  gui.rs  label.rs  main.rs  message.rs  util.rs
src/config/: mod.rs
src/gui/: dialog.rs  message_loader.rs  mod.rs  state.rs  util.rs  widgets.rs
src/gui/state/: filter.rs  highlight_id.rs  mod.rs
