[package]
name = "can_decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
csv = "1.1.6"
eframe = { version = "0.19.0", features = ["serde"], git = "https://github.com/emilk/egui" }
egui_extras = { version = "0.19.0", features = ["serde"], git = "https://github.com/emilk/egui" }
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.17.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
